PriorityQueue houdt enkel gesorteerd bij, dus niet dynamisch, vervangen door list in distinctpolicy